# BizVoice

./: .gitignore  PORT_SPEC.md  TAURI_MIGRATION.md  index.html  login.html  package-lock.json  package.json  settings.html  tailwind.config.js  tsconfig.json  update.html  vite.config.ts
docs/: plan.md
electron/main/: index.ts  localWhisper.ts  pipeline.ts
electron/preload/: index.ts
scripts/: build.mjs  make-ico.js  publish-to-bizgrowhub.mjs  release.mjs
src/: styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  overlay.rs  paste.rs  pipeline.rs  whisper.rs
src/lib/: tauriApi.ts
src/login/: Login.tsx  main.tsx
src/micBar/: MicBar.tsx  main.tsx
src/settings/: Settings.tsx  main.tsx
src/update/: Update.tsx  main.tsx
